--- a/style.css
+++ b/style.css
@@ -77,9 +77,9 @@ main{
 .active{
     font-weight: 700 !important;
 }
-/* .active.h3{
+.active.h3{
     font-weight: 700px !important;
-} */
+}
 .question>img{
     align-self: center;
 }
