--- a/style.css
+++ b/style.css
@@ -1,33 +1,34 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-body{
-    font-family: "Kumbh Sans" , sans-serif;
+
+body {
+    font-family: "Kumbh Sans", sans-serif;
     width: 100vw;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(hsl(273, 75%, 66%) ,hsl(240, 73%, 65%) );
+    background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
     Font-size: 12px;
     min-width: 440px;
 }
 
-main{
+main {
     background-color: #fff;
     border-radius: 30px;
     height: 509px;
     width: 920px;
     display: flex;
     justify-content: space-between;
-    background-image:url("./images/bg-pattern-desktop.svg");
+    background-image: url("./images/bg-pattern-desktop.svg");
     background-repeat: no-repeat;
     background-position: 1300% 70%;
-
 }
-.text-container{
+
+.text-container {
     width: 35%;
     margin-right: 15%;
     height: 100%;
@@ -36,111 +37,126 @@ main{
     justify-content: center;
     text-align: left !important;
     overflow-y: hidden;
-    
 }
-.text-container > h1{
+
+.text-container>h1 {
     font-weight: 700;
     font-size: 2.5em;
 }
 
-.QA-container{
+.QA-container {
     margin-top: 40px;
 }
 
-.QA-each{
+.QA-each {
     border-bottom: 1px solid hsl(0, 0%, 89%);
     padding: 15px 0;
     font-weight: 400;
 }
 
-.QA-each> .answers{
+.QA-each>.answers {
     display: none;
 }
 
-.question{
+.question {
     cursor: pointer;
     padding: 5px 0;
     display: flex;
     justify-content: space-between;
     transition: 0.3s;
 }
-.question>h3{
+
+.question>h3 {
     font-weight: 400;
     color: hsl(240, 6%, 50%);
+}
 
+.question>h3:hover {
+    color: hsl(14, 88%, 65%);
 }
-.question>h3:hover{
-    color:  hsl(14, 88%, 65%);
-    
-}
-/* -----script---- */
-.active{
-    font-weight: 700 !important;
-}
-.active.h3{
-    font-weight: 700px !important;
-}
-.question>img{
+
+.question>img {
     align-self: center;
 }
-/* -----script--- */
-.question.active img{
-    transform: rotate (180deg);
-    transform: all 0.3s ease-in;
-}
 
-.img-container{
+.img-container {
     width: 41%;
     position: relative;
 }
 
-.image-container{
+.image-container {
     background-image: url(./images/illustration-woman-online-desktop.svg);
     background-repeat: no-repeat;
-    background-position:100% center;
+    background-position: 100% center;
     height: 100%;
 }
 
-.box{
+.box {
     position: absolute;
     top: 40%;
     left: -25%;
 }
-.MobilePic{
+
+.MobilePic {
     display: none;
 }
+
+
 /* *************** */
+
 @media screen and (max-width: 1020px) {
-    main{
-        width:65%;
+    main {
+        width: 65%;
         height: auto;
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
-    .text-container > h1{
+    .text-container>h1 {
         font-weight: 700;
         font-size: 2.5em;
         text-align: center;
     }
-    .img-container{
+    .img-container {
         width: 50%;
         display: block;
         background-position: center;
         display: flex;
         justify-content: center;
     }
-    .text-container{
+    .text-container {
         justify-content: center;
         margin: 5px auto 30px;
         width: 90%;
     }
-    .box , .image-container{
-        display:none;
+    .box,
+    .image-container {
+        display: none;
     }
-    .MobilePic{
+    .MobilePic {
         display: block;
         margin: -110px auto 5px;
         padding-right: 30px;
     }
-  }
+}
+
+
+/* -----script---- */
+
+
+/* .active {
+    font-weight: 700 !important;
+} */
+
+.active.h3 {
+    font-weight: 700px !important;
+}
+
+.question.active img {
+    transform: rotate(180deg)!important;
+    transform: all 0.3s ease-in !important;
+}
+
+.answers.active {
+    display: block;
+}
